# bootstrap_cmds

./: CMakeLists.txt
compat/mach/: boolean.h  message.h  ndr.h  std_types.h
migcom.tproj/: error.c  mig.sh  type.h
